Fix multilingual navigation issues
- Disable recent posts to prevent cross-language content mixing
- Create custom home.html template with language filtering
- Update site-navigation.html to use language-aware site context
- Configure ananke.show_recent_posts = false

Issues remaining:
- Header title and menu still showing Slovak on EN/EL pages (WIP)

--- a/layouts/_partials/site-navigation.html
+++ b/layouts/_partials/site-navigation.html
@@ -1,23 +1,23 @@
 <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex-l center items-center justify-between">
-    <a href="{{ .Site.Home.RelPermalink }}" class="f3 fw2 hover-white white-90 dib no-underline">
-      {{ with .Site.Params.site_logo }}
-        <img src="{{ urls.RelURL . }}" class="w100 mw5-ns" alt="{{ $.Site.Title }}" />
+    <a href="{{ site.Home.RelPermalink }}" class="f3 fw2 hover-white white-90 dib no-underline">
+      {{ with site.Params.site_logo }}
+        <img src="{{ urls.RelURL . }}" class="w100 mw5-ns" alt="{{ site.Title }}" />
       {{ else }}
-        {{ .Site.Title }}
+        {{ site.Title }}
       {{ end }}
     </a>
     <div class="flex-l items-center">
       {{ partials.Include "i18nlist.html" . }}
-      {{ if .Site.Menus.main }}
-        <ul class="{{ compare.Conditional (compare.Eq $.Site.Language.LanguageDirection "rtl") "pr0 ml3" "pl0 mr3" }}">
-          {{ range .Site.Menus.main }}
-          <li class="list f5 f4-ns fw4 dib {{ compare.Conditional (compare.Eq $.Site.Language.LanguageDirection "rtl") "pl3" "pr3" }}">
+      {{ if site.Menus.main }}
+        <ul class="{{ compare.Conditional (compare.Eq site.Language.LanguageDirection "rtl") "pr0 ml3" "pl0 mr3" }}">
+          {{ range site.Menus.main }}
+          <li class="list f5 f4-ns fw4 dib {{ compare.Conditional (compare.Eq site.Language.LanguageDirection "rtl") "pl3" "pr3" }}">
             {{ $url := .URL }}
             {{ if .Page }}
               {{ $url = .Page.RelPermalink }}
             {{ else if .PageRef }}
-              {{ with $.Site.GetPage .PageRef }}
+              {{ with site.GetPage .PageRef }}
                 {{ $url = .RelPermalink }}
               {{ end }}
             {{ else }}
