Move logo to header title area (next to page title)
Changes:
- Create custom site-header.html partial
- Add logo to the left of the page title (h1) in header banner
- Logo displayed with flex layout: items-center justify-center
- Logo size: max-height 100px with auto width
- Revert site-navigation.html to not show logo

Result:
Logo now appears in the header banner area next to the big title text:
- Slovak: [logo-sk.jpeg] Vitajte v Istros
- English: [logo-en.jpeg] Welcome to Istros
- Greek: [logo-gr.jpeg] Καλώς ήρθατε στο Istros

The logo is positioned to the left of the title text in the header
banner (inside the 'tc-l pv3 ph3 ph4-ns' div), not in the navigation bar.

--- a/layouts/_partials/site-navigation.html
+++ b/layouts/_partials/site-navigation.html
@@ -1,10 +1,11 @@
 <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex-l center items-center justify-between">
-    <a href="{{ .Site.Home.RelPermalink }}" class="f3 fw2 hover-white white-90 no-underline flex items-center">
+    <a href="{{ .Site.Home.RelPermalink }}" class="f3 fw2 hover-white white-90 dib no-underline">
       {{ with .Site.Params.site_logo }}
-        <img src="{{ urls.RelURL . }}" class="mr3" style="max-height: 60px; width: auto;" alt="{{ $.Site.Title }}" />
+        <img src="{{ urls.RelURL . }}" class="w100 mw5-ns" alt="{{ $.Site.Title }}" />
+      {{ else }}
+        {{ $.Site.Title }}
       {{ end }}
-      <span>{{ $.Site.Title }}</span>
     </a>
     <div class="flex-l items-center">
       {{ partials.Include "i18nlist.html" . }}
