Update Slovak logo from JPEG to PNG format
Changes:
- Updated site-header.html to use logo-sk.png instead of logo-sk.jpeg
- Fixed both header sections (with and without featured image)
- Added logo-sk.png to static directory
- Removed old logo-sk.jpeg files from assets and static

The Slovak header now displays the new PNG logo (662KB) which
provides better quality than the previous JPEG (83KB).

--- a/layouts/_partials/site-header.html
+++ b/layouts/_partials/site-header.html
@@ -10,7 +10,7 @@
         <div class="flex items-center justify-center">
           {{ $logo := "" }}
           {{ if eq .Site.Language.Lang "sk" }}
-            {{ $logo = "/logo-sk.jpeg" }}
+            {{ $logo = "/logo-sk.png" }}
           {{ else if eq .Site.Language.Lang "en" }}
             {{ $logo = "/logo-en.jpeg" }}
           {{ else if eq .Site.Language.Lang "el" }}
@@ -39,7 +39,7 @@
         <div class="flex items-center justify-center">
           {{ $logo := "" }}
           {{ if eq .Site.Language.Lang "sk" }}
-            {{ $logo = "/logo-sk.jpeg" }}
+            {{ $logo = "/logo-sk.png" }}
           {{ else if eq .Site.Language.Lang "en" }}
             {{ $logo = "/logo-en.jpeg" }}
           {{ else if eq .Site.Language.Lang "el" }}
