--- a/layouts/_partials/site-header.html
+++ b/layouts/_partials/site-header.html
@@ -12,9 +12,9 @@
           {{ if eq .Site.Language.Lang "sk" }}
             {{ $logo = "/logo-sk.png" }}
           {{ else if eq .Site.Language.Lang "en" }}
-            {{ $logo = "/logo-en.jpeg" }}
+            {{ $logo = "/logo-en.png" }}
           {{ else if eq .Site.Language.Lang "el" }}
-            {{ $logo = "/logo-gr.jpeg" }}
+            {{ $logo = "/logo-gr.png" }}
           {{ end }}
           {{ if $logo }}
             <img src="{{ $logo }}" class="mr3 mr4-l" style="max-height: 150px; width: auto;" alt="{{ $.Site.Title }}" />
@@ -41,9 +41,9 @@
           {{ if eq .Site.Language.Lang "sk" }}
             {{ $logo = "/logo-sk.png" }}
           {{ else if eq .Site.Language.Lang "en" }}
-            {{ $logo = "/logo-en.jpeg" }}
+            {{ $logo = "/logo-en.png" }}
           {{ else if eq .Site.Language.Lang "el" }}
-            {{ $logo = "/logo-gr.jpeg" }}
+            {{ $logo = "/logo-gr.png" }}
           {{ end }}
           {{ if $logo }}
             <img src="{{ $logo }}" class="mr3 mr4-l" style="max-height: 150px; width: auto;" alt="{{ $.Site.Title }}" />
